2015-02-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* doc/install.texi (Specific): Reorder targets list to put
	aarch64 in alphabetical order.  Add a link to aarch64*-*-*
	from the top menu.

2015-02-16  Michael Haubenwallner  <michael.haubenwallner@ssi-schaefer.com>
	    David Edelsohn  <dje.gcc@gmail.com>

	PR target/65058
	* config/rs6000/rs6000.c (rs6000_output_symbol_ref): Append storage
	mapping class to external variable or function reference.
	* config/rs6000/xcoff.h (ASM_OUTPUT_EXTERNAL): Do not append storage
	mapping class.

2015-02-16  David Eelsohn  <dje.gcc@gmail.com>

	PR target/53348
	* config/rs6000/rs6000.c (rs6000_declare_alias): Only use
	ASM_WEAKEN_DECL if defined.

2015-02-16  Richard Biener  <rguenther@suse.de>

	PR lto/65015
	* varasm.c (default_file_start): For LTO produced units
	emit <artificial> as file directive.

2015-02-16  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63593
	* tree-predcom.c (execute_pred_commoning_chain): Delay removing
	stmts and releasing SSA names until...
	(execute_pred_commoning): ... after processing all chains.

2015-02-16  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65059
	* ipa-comdats.c (ipa_comdats): Do not categorize thunks to
	external functions.

2015-02-15  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/bugreport.texi: Adjust section titles throughout the file
	to use "Title Case".
	* doc/extend.texi: Likewise.
	* doc/gcov.texi: Likewise.
	* doc/implement-c.texi: Likewise.
	* doc/implement-cxx.texi: Likewise.
	* doc/invoke.texi: Likewise.
	* doc/objc.texi: Likewise.
	* doc/standards.texi: Likewise.
	* doc/trouble.texi: Likewise.

2015-02-15  Jan Hubicka  <hubicka@ucw.cz>

	* cgraph.h (symtab_node::has_aliases_p): Simplify.
	(symtab_node::call_for_symbol_and_aliases): Use has_aliases_p
	* tree.c (lookup_binfo_at_offset): Make static.
	(get_binfo_at_offset): Do not shadow offset; add explanatory
	comment.

2015-02-15  John David Anglin  <danglin@gcc.gnu.org>
