@@ -1,3 +1,8 @@
+2015-02-16  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/65077
+	* gcc.dg/torture/pr65077.c: New testcase.
+
 2015-02-16  Alex Velenko  <Alex.Velenko@arm.com>
 
 	* gcc.target/aarch64/atomic-op-consume.c (scan-assember-times):
